<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/b1"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:onClick="openActivity"
        android:text="@string/average"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/b2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b2"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:onClick="pL"
        android:text="@string/profit_loss"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/b3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b3"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="328dp"
        android:onClick="sqOff"
        android:text="@string/button"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_process_to_proceed"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/b1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />
</androidx.constraintlayout.widget.ConstraintLayout>